--- a/css/styles.css
+++ b/css/styles.css
@@ -18,8 +18,13 @@ body {
     border-bottom: 1px solid #E7E9FC;
 }
 .container {
-    width: 1128px;
+    width: 1158px;
     margin: 0 auto;
+    padding: 0 15px;
+}
+.nav-container {
+    display: flex;
+    align-items: center;
 }
 .feature-container {
     display: flex;
@@ -40,18 +45,15 @@ body {
 .contacts {
     display: flex;
     margin-left: auto;
+    gap: 40px;
 }
 .links {
     display: flex;
+    gap: 40px
 }
 
 a {
     text-decoration: none;
-}
-ul {
-    list-style: none;
-    padding-left: 0;
-    margin: 0;
 }
 
 .nav-link {
@@ -71,9 +73,6 @@ ul {
     font-weight: 400;
 
 }
-.contact-link:first-child{
-    margin-right: 40px;
-}
 
 .contact-link:hover, .contact-link:focus{
     color: var(--active-link-color);
@@ -89,16 +88,13 @@ ul {
     width: 500px;
     margin: 0 auto;
     letter-spacing: 0.02em;
+    margin-bottom: 48px;
 }
 .banner-section {
-    justify-content: center;
-    flex-wrap: wrap;
-    align-content: center;
-    display: flex;
+    
     background-color: var(--text-color-dark);
     text-align: center;
-    height: 600px;
-    margin-bottom: 90px;
+    padding: 188px 0;
     
 
 }
@@ -120,8 +116,6 @@ margin-right: 0;
 .buttons-portfolio {
     display: flex;
     justify-content: center;
-    margin-right: 24px;
-    margin-top: 96px;
     margin-bottom: 72px;
 }
 
@@ -132,7 +126,7 @@ margin-right: 0;
     color: var(--text-color-dark);
     font-weight: 800;
     letter-spacing: 0.02em;
-    margin-right: 56px;
+    margin-right: 77px;
 
     
 }
@@ -146,7 +140,7 @@ margin-right: 0;
     font-weight: 500;
     cursor: pointer;
     border-radius: 4px;
-    padding: 14px 20px;
+    padding: 16px 32px;
     font-size: 16px;
     letter-spacing: 0.04em;
     line-height: 1.5;
@@ -158,7 +152,7 @@ margin-right: 0;
     background-color: var(--brand-color);
     color: #FFFFFF;
     border-width: 0;
-    margin-top: 48px;
+   
      
 }
 .btn-blue:hover, .btn-blue:focus {
@@ -180,22 +174,24 @@ margin-right: 0;
 .description {
     line-height: 1.5;
     color: var(--text-color-grey);
-    margin-top: 0;
-    margin-bottom: 32px;
+    margin-top: 8px;
     
 }
-.text-article{
-    padding-left: 16px;
+.title-description {
+    padding: 32px 16px;
 }
-
+.portfolio-section{
+    padding-bottom: 72px;
+    padding-top: 96px;
+}
 .title {
     line-height: 1.5;
     font-weight: 500;
     font-size: 20px;
     color: var(--text-color-dark);
     letter-spacing: 0.02em;
-    margin-bottom: 8px;
-    margin-top: 32px;
+    
+   
    
 }
 
@@ -207,10 +203,10 @@ margin-right: 0;
     letter-spacing: 0.02em;
     text-align: center;
     margin-bottom: 72px;
-    margin-top: 0;
+    
 }
 .features {
-    margin-bottom: 120px;
+    padding: 120px 0;
 }
 .foto-index{
     display: flex;
@@ -240,7 +236,7 @@ background-color: #FFFFFF;
     margin-right: 0;
 }
 .foto-section{
-    margin-bottom: 120px;
+    padding-bottom: 120px;
 }
 .bg-grey{
     background-color: var(--bg-grey-color);
@@ -276,6 +272,7 @@ background-color: #FFFFFF;
    color: #E7E9FC;
     line-height: 1.5;
     width: 264px;
+    margin-top: 16px;
 }
 
 .footer-info {
