--- a/css/styles.css
+++ b/css/styles.css
@@ -28,13 +28,7 @@ body {
 }
 .feature-container {
     display: flex;
-    
-}
-.feature-container > li{
-    margin-right: 24px;
-}
-.feature-container > li:last-child{
-    margin-right: 0px;
+    gap: 24px;
 }
 
 .nav{
@@ -61,7 +55,7 @@ a {
     color: var(--text-color-dark);
     font-weight: 500;
     font-size: 16px;
-    padding: 27px 20px;
+    padding: 27px 0;
 }
 .nav-link:hover, .nav-link:focus, .nav-link.current {
     color: var(--active-link-color);
@@ -101,16 +95,13 @@ a {
 .articles-portfolio {
     display: flex;
     flex-wrap: wrap;
+    gap: 24px;
 }
 .articles-portfolio > li{
     border: 1px solid #E7E9FC;
-    margin-right: 24px;
     margin-bottom: 48px;
     width: 360px;
     text-align: left;
-}
-.articles-portfolio > li:nth-child(3n) {
-margin-right: 0;
 }
 
 .buttons-portfolio {
@@ -151,7 +142,7 @@ margin-right: 0;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     background-color: var(--brand-color);
     color: #FFFFFF;
-    border-width: 0;
+    border: none;
    
      
 }
@@ -210,15 +201,14 @@ margin-right: 0;
 }
 .foto-index{
     display: flex;
+    gap: 24px;
 
 }
 .foto-index li{
-    margin-right: 24px;
     border: 1px solid #E7E9FC;
+
 }
-.foto-index li:last-child{
-    margin-right: 0;
-}
+
 .team-foto-index{
     display: flex;
     margin-top: 72px;
