--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,30 @@ body {
     letter-spacing: 0.02em;
     
 }
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p
+{
+    padding:0;
+    margin:0;
+
+}
+
+ul{
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
+    list-style: none;
+}
 .header {
     border-bottom: 1px solid #E7E9FC;
 }
@@ -29,6 +53,9 @@ body {
 .feature-container {
     display: flex;
     gap: 24px;
+}
+.feature-item {
+    width: 264pxF;
 }
 
 .nav{
@@ -95,17 +122,16 @@ a {
 .articles-portfolio {
     display: flex;
     flex-wrap: wrap;
-    gap: 24px;
+    gap: 48px 24px;
 }
-.articles-portfolio > li{
-    border: 1px solid #E7E9FC;
-    margin-bottom: 48px;
+.articles-portfolio > li{ 
     width: 360px;
-    text-align: left;
+    
 }
 
 .buttons-portfolio {
     display: flex;
+    gap: 24px;
     justify-content: center;
     margin-bottom: 72px;
 }
@@ -118,6 +144,7 @@ a {
     font-weight: 800;
     letter-spacing: 0.02em;
     margin-right: 77px;
+    word-spacing: -4px;
 
     
 }
@@ -131,7 +158,7 @@ a {
     font-weight: 500;
     cursor: pointer;
     border-radius: 4px;
-    padding: 16px 32px;
+    padding: 12px 24px;
     font-size: 16px;
     letter-spacing: 0.04em;
     line-height: 1.5;
@@ -143,6 +170,7 @@ a {
     background-color: var(--brand-color);
     color: #FFFFFF;
     border: none;
+    padding: 16px 32px;
    
      
 }
@@ -154,7 +182,6 @@ a {
     background-color: #F4F4FD;
     color: var(--brand-color);
     border: 1px solid #E7E9FC;
-    margin: 0 10px;
 }
 
 .btn-white:hover {
@@ -170,9 +197,15 @@ a {
 }
 .title-description {
     padding: 32px 16px;
+    border: 1px solid #E7E9FC;
+    border-top: 0;
+}
+.title-description-team{
+    padding: 32px 16px;
+    
 }
 .portfolio-section{
-    padding-bottom: 72px;
+    padding-bottom: 120px;
     padding-top: 96px;
 }
 .title {
@@ -210,21 +243,20 @@ a {
 }
 
 .team-foto-index{
+    gap: 24px;
     display: flex;
-    margin-top: 72px;
     text-align: center;
     
 }
 
 .team-foto-index li {
-    margin-right: 24px; 
+     width: 264px;
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 border-radius: 0px 0px 4px 4px;
 background-color: #FFFFFF;
+
 }
-.team-foto-index:last-child{
-    margin-right: 0;
-}
+
 .foto-section{
     padding-bottom: 120px;
 }
@@ -250,7 +282,7 @@ background-color: #FFFFFF;
 
 .footer {
     background-color: var(--text-color-dark);
-    color: #FFF;
+    padding: 100px 0;
     
 }
 
@@ -266,9 +298,7 @@ background-color: #FFFFFF;
 }
 
 .footer-info {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: 310px;
+  
+  
 }
 
